started working on last part, fixed the text divicion, now I have to work on organizing the sub categories and giving them good spacing and picking good background colors and stuff and i should be pretty much done with the project honestly I couldve gotten this done with in like 2 weeks prob but Iam so unconsistent that every project usually takes months to be complete, but I am working on it. Day 4 I believe

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;   
 }
+
 body {
     height: 100vh;
     width: 100vw;
@@ -16,11 +17,11 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    background-color:darkseagreen;
     grid-column: 2/5;
     grid-row: 1/2;
     padding-left: 40px;
     padding-right: 40px;
+    border-bottom: 2px solid black;
 }
 
 /* header adjustments */
@@ -102,7 +103,6 @@ body {
 
 /* Side bar creation and adjustments */
 .side-bar {
-    background-color:bisque;
     grid-column: 1/2;
     grid-row: 1/6;
     display: grid;
@@ -111,6 +111,7 @@ body {
     padding-left: 20px;
     align-items: center;
     row-gap: 20px;
+    border-right: 2px solid black;
 }
 /* Side bar adjustments */
 
@@ -218,9 +219,10 @@ body {
 /* Main content creation and adjustments */
 
 .main-content {
-    background-color: red;
+    background-color: lightgray;
     grid-column: 2/5;
     grid-row: 2/6;
+    display: grid;
 }
 
 /* main content adjustments */
